--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<mariadb.java.client.version>1.4.6</mariadb.java.client.version>
 		<commons.dbcp2.version>2.1.1</commons.dbcp2.version>
 		<mongo.java.driver.version>3.2.2</mongo.java.driver.version>
+		<hibernate.validator.version>5.2.4.Final</hibernate.validator.version>
 		<ehcache.version>2.10.2.2.21</ehcache.version>
 		<servlet.api.version>3.1.0</servlet.api.version>
 		<jsp.api.version>2.3.1</jsp.api.version>
@@ -104,6 +105,14 @@
 			<version>${mongo.java.driver.version}</version>
 		</dependency>
 		<!-- MongoDB数据库依赖结束 -->
+
+		<!-- JSR303验证框架开始 -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>${hibernate.validator.version}</version>
+		</dependency>
+		<!-- JSR303验证框架结束 -->
 
 		<!-- Ehcache缓存框架(提升shiro-ehcache依赖版本并和Spring框架整合)开始 -->
 		<dependency>
