--- a/pom.xml
+++ b/pom.xml
@@ -107,11 +107,11 @@
 		<!-- MongoDB数据库依赖结束 -->
 
 		<!-- JSR303验证框架开始 -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>${hibernate.validator.version}</version>
-		</dependency>
+		</dependency> -->
 		<!-- JSR303验证框架结束 -->
 
 		<!-- Ehcache缓存框架(提升shiro-ehcache依赖版本并和Spring框架整合)开始 -->
