--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 	<properties>
 		<springframework.version>3.2.17.RELEASE</springframework.version>
 		<shiro.version>1.2.5</shiro.version>
+		<jackson.version>2.7.5</jackson.version>
 		<mariadb.java.client.version>1.4.6</mariadb.java.client.version>
 		<commons.dbcp2.version>2.1.1</commons.dbcp2.version>
 		<mongo.java.driver.version>3.2.2</mongo.java.driver.version>
@@ -36,6 +37,11 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${springframework.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -77,6 +83,14 @@
 			<version>${shiro.version}</version>
 		</dependency>
 		<!-- Shiro权限框架依赖结束 -->
+
+		<!-- Jackson json序列化和反序列化框架开始 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<!-- Jackson json序列化和反序列化框架结束 -->
 
 		<!-- MySQL(MariaDB)数据库及连接池DBCP2依赖开始 -->
 		<dependency>
